[tool.poetry]
name = "mkdocs-edu"
version = "0.1.0"
description = "mkdocs for education web site"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mkdocs = "^1.3.1"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-calendar-plugin = "^0.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-glightbox = "^0.3.4"
mkdocs-include-markdown-plugin = "^5.1.0"
mkdocs-jconfig-plugin = "^0.1.1"
mkdocs-macros-plugin = "1.0.2"
mkdocs-material = "^9.1.21"
mkdocs-mermaid2-plugin = "^1.0.1"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-pages-j2-plugin = "^0.2.0"
mkdocs-static-i18n = "0.56"
python-markdown-comments = { git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "973fe7b" }
python-markdown-math = "^0.8"
platformdirs = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
