[tool.poetry]
name = "mkdocs-edu"
version = "0.2.3"
description = "mkdocs for education web site"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mkdocs = "^1.5.2"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-calendar-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-glightbox = "^0.3.4"
mkdocs-include-markdown-plugin = "^6.0.1"
mkdocs-jconfig-plugin = "^0.1.2"
mkdocs-macros-plugin = "1.0.4"
mkdocs-material = "^9.3.1"
mkdocs-mermaid2-plugin = "^1.1.0"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-pages-j2-plugin = "^0.2.0"
mkdocs-static-i18n = "^1.0.3"
python-markdown-comments = { git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "973fe7b" }
python-markdown-math = "^0.8"
platformdirs = "^3.10.0"
mkdocs-open-in-new-tab = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
