[tool.poetry]
name = "mkdocs-edu"
version = "0.1.0"
description = "mkdocs for education web site"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4"
mkdocs = "^1.3.1"
mkdocs-material = "8.4.0rc1"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-simple-hooks = "^0.1.5"
mkdocs-static-i18n = "^0.46"
python-markdown-comments = {git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "aa82610"}
python-markdown-math = "^0.8"
jinja2-cli = "^0.8.2"
mkdocs-include-markdown-plugin = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"